# local-chatbot

./: README.md  agent.py  main.py  pyproject.toml  rag.py  tools.py
.github/workflows/: dependency-review.yml
docs/: bangkok_guide.md  paris_guide.md  tokyo_guide.md
faiss_index/: index.faiss  index.pkl
scripts/: build_index.py
